// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Full Examples test-with-NS.mt940x statements 1`] = `
Array [
  Statement {
    "accountIdentification": "B4E08MS9D00A0009",
    "closingAvailableBalance": "2996.53",
    "closingAvailableBalanceDate": 2017-01-24T00:00:00.000Z,
    "closingBalance": "2996.53",
    "closingBalanceDate": 2017-01-24T00:00:00.000Z,
    "currency": "PLN",
    "forwardAvailableBalance": "2996.53",
    "forwardAvailableBalanceDate": 2017-01-24T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {},
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "17001",
    },
    "openingBalance": "3503.6",
    "openingBalanceDate": 2017-01-01T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "17013109020",
    "transactions": Array [
      Transaction {
        "amount": "-369",
        "bankReference": "",
        "currency": "PLN",
        "date": 2017-01-03T00:00:00.000Z,
        "detailSegments": Array [
          ">20Usługi księgowe - m-c grudzien 2016 rok.>31491050195310000
0477656534>32BOOKING GROUP",
        ],
        "entryDate": "",
        "extraDetails": "",
        "fundsCode": "N",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "FCHG",
      },
      Transaction {
        "amount": "-15.07",
        "bankReference": "",
        "currency": "PLN",
        "date": 2017-01-04T00:00:00.000Z,
        "detailSegments": Array [
          ">20VB ELECTR. PŁATNOŚĆ KARTĄ 3.32 EUR 1 EUR=
4.5385 PLN GOOGLE *SVCSAPPS@google.com>31>32",
        ],
        "entryDate": "",
        "extraDetails": "",
        "fundsCode": "N",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "FCHG",
      },
      Transaction {
        "amount": "-123",
        "bankReference": "",
        "currency": "PLN",
        "date": 2017-01-10T00:00:00.000Z,
        "detailSegments": Array [
          ">20usługa biurowa 2017/01>315910902053000000
016768736>32OFFICE GROUP
UL. SPOKOJNA 3",
        ],
        "entryDate": "",
        "extraDetails": "",
        "fundsCode": "N",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "FCHG",
      },
    ],
  },
  Statement {
    "accountIdentification": "B4E08MS9D00A0009",
    "closingAvailableBalance": "2971.53",
    "closingAvailableBalanceDate": 2017-01-31T00:00:00.000Z,
    "closingBalance": "2971.53",
    "closingBalanceDate": 2017-01-31T00:00:00.000Z,
    "currency": "PLN",
    "forwardAvailableBalance": "2971.53",
    "forwardAvailableBalanceDate": 2017-01-31T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {},
    "number": Object {
      "section": "",
      "sequence": "2",
      "statement": "17001",
    },
    "openingBalance": "2996.53",
    "openingBalanceDate": 2017-01-24T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "17013109020",
    "transactions": Array [
      Transaction {
        "amount": "-25",
        "bankReference": "",
        "currency": "PLN",
        "date": 2017-01-31T00:00:00.000Z,
        "detailSegments": Array [
          ">20Opłata za prowadzenie rachunku od  1-01-2017 do 31-01-2017
>31>32",
        ],
        "entryDate": "",
        "extraDetails": "",
        "fundsCode": "N",
        "isReversal": false,
        "nonSwift": "01My Street 17
02City and Region
03Invoice Nr. 12345",
        "reference": "NONREF",
        "transactionType": "FCHG",
      },
    ],
  },
]
`;

exports[`Parser Full Examples test-with-NS.mt940x transaction computed state 1`] = `
Array [
  Object {
    "details": ">20Usługi księgowe - m-c grudzien 2016 rok.>31491050195310000
0477656534>32BOOKING GROUP",
    "structuredDetails": Object {
      "20": "Usługi księgowe - m-c grudzien 2016 rok.",
      "31": "4910501953100000477656534",
      "32": "BOOKING GROUP",
    },
  },
  Object {
    "details": ">20VB ELECTR. PŁATNOŚĆ KARTĄ 3.32 EUR 1 EUR=
4.5385 PLN GOOGLE *SVCSAPPS@google.com>31>32",
    "structuredDetails": Object {
      "20": "VB ELECTR. PŁATNOŚĆ KARTĄ 3.32 EUR 1 EUR=4.5385 PLN GOOGLE *SVCSAPPS@google.com",
      "31": "",
      "32": "",
    },
  },
  Object {
    "details": ">20usługa biurowa 2017/01>315910902053000000
016768736>32OFFICE GROUP
UL. SPOKOJNA 3",
    "structuredDetails": Object {
      "20": "usługa biurowa 2017/01",
      "31": "5910902053000000016768736",
      "32": "OFFICE GROUPUL. SPOKOJNA 3",
    },
  },
  Object {
    "details": ">20Opłata za prowadzenie rachunku od  1-01-2017 do 31-01-2017
>31>32",
    "structuredDetails": Object {
      "20": "Opłata za prowadzenie rachunku od  1-01-2017 do 31-01-2017",
      "31": "",
      "32": "",
    },
  },
]
`;

exports[`Parser Full Examples test1.mt940 statements 1`] = `
Array [
  Statement {
    "accountIdentification": "123456789",
    "closingAvailableBalance": "500",
    "closingAvailableBalanceDate": 2014-05-08T00:00:00.000Z,
    "closingBalance": "500",
    "closingBalanceDate": 2014-05-08T00:00:00.000Z,
    "currency": "EUR",
    "forwardAvailableBalance": "500",
    "forwardAvailableBalanceDate": 2014-05-08T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {
      "1": Object {
        "value": "F01KNABNL2HAXXX0000000000",
      },
      "2": Object {
        "value": "I940KNABNL2HXXXXN3020",
      },
    },
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "998",
    },
    "openingBalance": "0",
    "openingBalanceDate": 2014-05-07T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "B4E08MS9D00A0009",
    "transactions": Array [
      Transaction {
        "amount": "500",
        "bankReference": "B4E07XM00J000023",
        "currency": "EUR",
        "date": 2014-05-07T00:00:00.000Z,
        "detailSegments": Array [
          "HIER EEN MOOIE OMSCHRIJVING IN HOOFDLETTERS
WANT DAT IS ZOALS DE NEDERLANDSE BANKEN COMMUNICEREN",
        ],
        "entryDate": 2014-05-07T00:00:00.000Z,
        "extraDetails": "",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
    ],
  },
  Statement {
    "accountIdentification": "123456789",
    "closingAvailableBalance": "798.98",
    "closingAvailableBalanceDate": 2014-07-30T00:00:00.000Z,
    "closingBalance": "798.98",
    "closingBalanceDate": 2014-07-30T00:00:00.000Z,
    "currency": "EUR",
    "forwardAvailableBalance": "798.98",
    "forwardAvailableBalanceDate": 2014-07-30T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {
      "1": Object {
        "value": "F01KNABNL2HAXXX0000000000",
      },
      "2": Object {
        "value": "I940KNABNL2HXXXXN3020",
      },
    },
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "999",
    },
    "openingBalance": "3058.98",
    "openingBalanceDate": 2014-07-29T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "B4G30MS9D00A003D",
    "transactions": Array [
      Transaction {
        "amount": "-2760",
        "bankReference": "B4G29PGCVO7Q06US",
        "currency": "EUR",
        "date": 2014-07-29T00:00:00.000Z,
        "detailSegments": Array [
          "FACTUUR 201403110, 201403113
REK: NL65INGB0123456789/NAAM: PICQER",
        ],
        "entryDate": 2014-07-29T00:00:00.000Z,
        "extraDetails": "/OCMT/EUR10,00/",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
      Transaction {
        "amount": "500",
        "bankReference": "B4G29PGDCK1QFV3E",
        "currency": "EUR",
        "date": 2014-07-29T00:00:00.000Z,
        "detailSegments": Array [
          "12160475 0050001631430920 ORDERID: 264267 MEDIA MARKT ONLINE NE
REK: NL84INGB0234561789/NAAM: MMS ONLINE NEDERLAND B.V.",
        ],
        "entryDate": 2014-07-29T00:00:00.000Z,
        "extraDetails": "",
        "fundsCode": "",
        "isReversal": false,
        "reference": "29-07-2014 10:05",
        "transactionType": "NTRF",
      },
    ],
  },
]
`;

exports[`Parser Full Examples test1.mt940 transaction computed state 1`] = `
Array [
  Object {
    "details": "HIER EEN MOOIE OMSCHRIJVING IN HOOFDLETTERS
WANT DAT IS ZOALS DE NEDERLANDSE BANKEN COMMUNICEREN",
    "structuredDetails": undefined,
  },
  Object {
    "details": "FACTUUR 201403110, 201403113
REK: NL65INGB0123456789/NAAM: PICQER",
    "structuredDetails": undefined,
  },
  Object {
    "details": "12160475 0050001631430920 ORDERID: 264267 MEDIA MARKT ONLINE NE
REK: NL84INGB0234561789/NAAM: MMS ONLINE NEDERLAND B.V.",
    "structuredDetails": undefined,
  },
]
`;

exports[`Parser Full Examples test1.mt942 1`] = `
Array [
  Statement {
    "accountIdentification": "123011050612305",
    "dateTimeIndication": 2020-05-20T22:17:00.000Z,
    "informationToAccountOwner": "",
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "17",
    },
    "relatedReference": undefined,
    "transactionReference": "FNB5014200017001",
    "transactions": Array [
      Transaction {
        "amount": "-5000",
        "bankReference": "",
        "currency": undefined,
        "date": 2020-05-21T00:00:00.000Z,
        "detailSegments": Array [
          "/BAI/469/MISCELLANEOUS ACH DEBIT
/BENM/Transfer",
        ],
        "entryDate": 2020-05-21T00:00:00.000Z,
        "extraDetails": "Transfer",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
      Transaction {
        "amount": "5000",
        "bankReference": "",
        "currency": undefined,
        "date": 2020-05-21T00:00:00.000Z,
        "detailSegments": Array [
          "/BAI/399/MISCELLANEOUS CREDIT
/ORDP/test rate
/ACNO/12-3011-0334122-37",
        ],
        "entryDate": 2020-05-21T00:00:00.000Z,
        "extraDetails": "test rate/NBKT",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NBKT",
      },
    ],
  },
]
`;

exports[`Parser Full Examples test2.mt942 1`] = `
Array [
  Statement {
    "accountIdentification": "123011050612305",
    "dateTimeIndication": 2020-05-21T01:16:00.000Z,
    "informationToAccountOwner": "",
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "18",
    },
    "relatedReference": "GNHD99KKSLL99001",
    "transactionReference": "FNB5014200018001",
    "transactions": Array [
      Transaction {
        "amount": "-5000",
        "bankReference": "",
        "currency": undefined,
        "date": 2020-05-21T00:00:00.000Z,
        "detailSegments": Array [
          "/BAI/469/MISCELLANEOUS ACH DEBIT
/BENM/Transfer",
        ],
        "entryDate": 2020-05-21T00:00:00.000Z,
        "extraDetails": "Transfer",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
      Transaction {
        "amount": "-20",
        "bankReference": "",
        "currency": undefined,
        "date": 2020-05-21T00:00:00.000Z,
        "detailSegments": Array [
          "/BAI/469/MISCELLANEOUS ACH DEBIT
/BENM/Transfer
/ACNO/012-3011-00334130-0037",
        ],
        "entryDate": 2020-05-21T00:00:00.000Z,
        "extraDetails": "Transfer",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
      Transaction {
        "amount": "5020",
        "bankReference": "",
        "currency": undefined,
        "date": 2020-05-21T00:00:00.000Z,
        "detailSegments": Array [
          "/BAI/399/MISCELLANEOUS CREDIT
/ORDP/wording
/ACNO/12-3011-0334130-37",
        ],
        "entryDate": 2020-05-21T00:00:00.000Z,
        "extraDetails": "wording/NBKT",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NBKT",
      },
    ],
  },
]
`;

exports[`Parser Full Examples testX.mt940 statements 1`] = `
Array [
  Statement {
    "accountIdentification": "123456789",
    "closingAvailableBalance": "500",
    "closingAvailableBalanceDate": 2014-05-08T00:00:00.000Z,
    "closingBalance": "500",
    "closingBalanceDate": 2014-05-08T00:00:00.000Z,
    "currency": "EUR",
    "forwardAvailableBalance": "500",
    "forwardAvailableBalanceDate": 2014-05-08T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {
      "1": Object {
        "value": "F01KNABNL2HAXXX0000000000",
      },
      "2": Object {
        "value": "I940KNABNL2HXXXXN3020",
      },
      "5": Object {
        "value": "{MAC:ABCDEFG}",
      },
    },
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "998",
    },
    "openingBalance": "0",
    "openingBalanceDate": 2014-05-07T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "B4E08MS9D00A0009",
    "transactions": Array [
      Transaction {
        "amount": "500",
        "bankReference": "B4E07XM00J000023",
        "currency": "EUR",
        "date": 2014-05-07T00:00:00.000Z,
        "detailSegments": Array [
          " /XXXX//100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL)
 /ORDP/XXXXXXXXXXXXX XXXXXXXX BANKEN AB (PUBL) (FORMER: SXB A
 /REMI/XXXXXXXXXXX OUR REF: 03MT181012182288
YOUR REF: 181012671        M CA O/XXXXDK22
BIC:XXXXDK22",
        ],
        "entryDate": 2014-05-07T00:00:00.000Z,
        "extraDetails": "",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
    ],
  },
  Statement {
    "accountIdentification": "123456789",
    "closingAvailableBalance": "798.98",
    "closingAvailableBalanceDate": 2014-07-30T00:00:00.000Z,
    "closingBalance": "798.98",
    "closingBalanceDate": 2014-07-30T00:00:00.000Z,
    "currency": "EUR",
    "forwardAvailableBalance": "798.98",
    "forwardAvailableBalanceDate": 2014-07-30T00:00:00.000Z,
    "informationToAccountOwner": "",
    "messageBlocks": Object {
      "1": Object {
        "value": "F01KNABNL2HAXXX0000000000",
      },
      "2": Object {
        "value": "I940KNABNL2HXXXXN3020",
      },
      "5": Object {
        "value": "{MAC:12345678}{CHK:123456789ABC}",
      },
    },
    "number": Object {
      "section": "",
      "sequence": "1",
      "statement": "999",
    },
    "openingBalance": "3058.98",
    "openingBalanceDate": 2014-07-29T00:00:00.000Z,
    "relatedReference": undefined,
    "transactionReference": "B4G30MS9D00A003D",
    "transactions": Array [
      Transaction {
        "amount": "-2760",
        "bankReference": "B4G29PGCVO7Q06US",
        "currency": "EUR",
        "date": 2014-07-29T00:00:00.000Z,
        "detailSegments": Array [
          " /XXXX//100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL)
 /ORDP/XX XXXXXX XXXXX XXXX N.A.25 XXXX XXXXX, CANARY WHARF
 /REMI/UBERWEISUNG OUR REF: 03MT181024144353
YOUR REF: P6363103 240 1   M CA O/XXXXGB2L
/ACC/INST/XXXXGB2L         /6231400604
BIC:XXXXGB2L",
        ],
        "entryDate": 2014-07-29T00:00:00.000Z,
        "extraDetails": "/OCMT/EUR10,00/",
        "fundsCode": "",
        "isReversal": false,
        "reference": "NONREF",
        "transactionType": "NTRF",
      },
      Transaction {
        "amount": "500",
        "bankReference": "B4G29PGDCK1QFV3E",
        "currency": "EUR",
        "date": 2014-07-29T00:00:00.000Z,
        "detailSegments": Array [
          "12160475 0050001631430920 ORDERID: 264267 MEDIA MARKT ONLINE NE
REK: NL84INGB0234561789/NAAM: MMS ONLINE NEDERLAND B.V.",
        ],
        "entryDate": 2014-07-29T00:00:00.000Z,
        "extraDetails": "",
        "fundsCode": "",
        "isReversal": false,
        "reference": "29-07-2014 10:05",
        "transactionType": "NTRF",
      },
    ],
  },
]
`;

exports[`Parser Full Examples testX.mt940 transaction computed state 1`] = `
Array [
  Object {
    "details": " /XXXX//100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL)
 /ORDP/XXXXXXXXXXXXX XXXXXXXX BANKEN AB (PUBL) (FORMER: SXB A
 /REMI/XXXXXXXXXXX OUR REF: 03MT181012182288
YOUR REF: 181012671        M CA O/XXXXDK22
BIC:XXXXDK22",
    "structuredDetails": Object {
      "ORDP": "XXXXXXXXXXXXX XXXXXXXX BANKEN AB (PUBL) (FORMER: SXB A ",
      "REMI": "XXXXXXXXXXX OUR REF: 03MT181012182288YOUR REF: 181012671        M CA O/XXXXDK22BIC:XXXXDK22",
      "XXXX": "/100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL) ",
    },
  },
  Object {
    "details": " /XXXX//100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL)
 /ORDP/XX XXXXXX XXXXX XXXX N.A.25 XXXX XXXXX, CANARY WHARF
 /REMI/UBERWEISUNG OUR REF: 03MT181024144353
YOUR REF: P6363103 240 1   M CA O/XXXXGB2L
/ACC/INST/XXXXGB2L         /6231400604
BIC:XXXXGB2L",
    "structuredDetails": Object {
      "ACC": "INST/XXXXGB2L         /6231400604BIC:XXXXGB2L",
      "ORDP": "XX XXXXXX XXXXX XXXX N.A.25 XXXX XXXXX, CANARY WHARF ",
      "REMI": "UBERWEISUNG OUR REF: 03MT181024144353YOUR REF: P6363103 240 1   M CA O/XXXXGB2L",
      "XXXX": "/100924006010 XXXXXXXXXXXXX XXXXXXXX XXXXXX AB (PUBL) ",
    },
  },
  Object {
    "details": "12160475 0050001631430920 ORDERID: 264267 MEDIA MARKT ONLINE NE
REK: NL84INGB0234561789/NAAM: MMS ONLINE NEDERLAND B.V.",
    "structuredDetails": undefined,
  },
]
`;
